DeleteCollectorServiceCategory
